<resources>
    <string name="app_name">ExamDayStore</string>

    <string name="hola_de_nuevo">¡Hola de nuevo!</string>
    <string name="esta_es_la_prueba_tecnica">Esta es la prueba tecnica para el puesto de desarrollador de android para la empresa DayStore.</string>
    <string name="introduce_tu_correo_electronico">Introduce tu correo electrónico.</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="introduce_tu_contrase_a">Introduce tu contraseña</string>
    <string name="inicia_sesion_para">Inicia sesion para acceder a todas las funcionalidades de esta aplicacion.</string>
    <string name="imagen_de_header">Imagen de header</string>
    <string name="code_200">OK</string>
    <string name="code_404">Error de conexión. Intenta más tarde.</string>
    <string name="not_conection">Sin conexión a internet.</string>
    <string name="error_unknown">Error desconocido.</string>
    <string name="deseas_enviar_tu_ubicacion">¿Deseas enviar tu ubicacion?</string>
    <string name="puedes_enviar_tu_ubicacion_presionando_nel_boton_de_arriba">Puedes enviar tu ubicacion presionando\nel botón circular que se encuentra arriba de tu email.</string>
    <string name="btn_para_enviar_ubicacion">Btn para enviar ubicacion</string>
    <string name="beatfast20_live_com">beatfast20@live.com</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="enviar_ubicacion">Enviar ubicacion</string>
    <string name="tu_codigo_de_sesion_fue">Tu código de sesión fue:</string>
    <string name="has_iniciado_sesion_como">Has iniciado sesion como:</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="code">32432</string>
    <string name="esta_aplicacion_monitorea">Esta aplicacion monitorea en tiempo real tu ubicación, mostrandotela en un punto especifico dentro de un mapa de Google.</string>
    <string name="mostrar_historial">Mostrar historial de ubicaciones</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="aqui_podras_ver_el_historial">Aqui podras ver el historial de todas las ubicaciones que guardaste anteriormente, puedes presionar una ubicación para verla nuevamente en el mapa.</string>
    <string name="ver_historial">Ver historial</string>
    <string name="mostrando_ubicacion">Mostrando ubicacion guardada anteriormente</string>
    <string name="_234_234234">234.234234</string>
    <string name="icono_planeta">Icono planeta</string>
    <string name="historial">Historial</string>
    <string name="background">Background</string>
    <string name="mi_logo">Mi logo</string>
    <string name="c_digo">Còdigo</string>
    <string name="_3232">3232</string>
    <string name="a_n_no_has_enviado_ninguna_ubicaci_n">Aùn no has enviado ninguna ubicaciòn.</string>

</resources>