<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_marginTop="10sp"
            android:layout_width="0sp"
            android:layout_height="0sp"
            app:layout_constraintHeight_percent="0.23"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/header"
            android:contentDescription="@string/imagen_de_header" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TitleSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/hola_de_nuevo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/horizontal_app_margin"
            android:layout_marginEnd="@dimen/horizontal_app_margin"
            android:text="@string/inicia_sesion_para"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilEmail"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="@dimen/horizontal_app_margin"
            android:layout_marginEnd="@dimen/horizontal_app_margin"
            app:boxCornerRadiusTopStart="30sp"
            app:boxCornerRadiusTopEnd="30sp"
            app:errorEnabled="true"
            app:errorTextColor="@color/error_color"
            app:errorIconTint="@color/error_color"
            app:boxStrokeErrorColor="@android:color/transparent"
            app:boxStrokeColor="@android:color/transparent"
            app:startIconDrawable="@drawable/user_icon"
            android:hint="@string/introduce_tu_correo_electronico"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescripcion">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="75sp"
                android:maxLength="80"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilPassword"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_app_margin"
            android:layout_marginEnd="@dimen/horizontal_app_margin"
            android:layout_marginTop="-8sp"
            app:boxCornerRadiusBottomStart="30sp"
            app:boxCornerRadiusBottomEnd="30sp"
            app:errorEnabled="true"
            app:errorTextColor="@color/error_color"
            app:boxStrokeWidth="0sp"
            app:errorIconTint="@color/error_color"
            app:boxStrokeErrorColor="@android:color/transparent"
            app:boxStrokeColor="@android:color/transparent"
            app:endIconMode="password_toggle"
            app:boxStrokeWidthFocused="0sp"
            app:startIconDrawable="@drawable/email_icon"
            android:hint="@string/introduce_tu_contrase_a"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ilEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:maxLength="7"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvRecoverPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/recuperar_contrase_a"
            app:layout_constraintEnd_toEndOf="@+id/ilPassword"
            app:layout_constraintTop_toBottomOf="@+id/ilPassword" />


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_btn"
            android:text="@string/iniciar_sesion"
            app:layout_constraintEnd_toEndOf="@+id/ilPassword"
            app:layout_constraintStart_toStartOf="@+id/ilPassword"
            app:layout_constraintTop_toBottomOf="@+id/tvRecoverPass" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_app_margin"
            android:layout_marginTop="80sp"
            android:layout_marginEnd="@dimen/horizontal_app_margin"
            android:text="@string/esta_es_la_prueba_tecnica"
            android:textAlignment="center"
            android:layout_marginBottom="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>